--- a/src/app/agregar-rec/formulario/formulario.component.html
+++ b/src/app/agregar-rec/formulario/formulario.component.html
@@ -24,7 +24,7 @@
       <ion-item fill="outline" class="item-espaciado">
         <ion-label>Calle:</ion-label>
         <ion-input inputmode="text" formControlName="calleCtrl"></ion-input>
-        <ion-note slot="error" *ngIf="form.controls.calleCtrl.touched">Ingrese la calle en donde queda ubicada la recicladora. En caso de no saberlo escriba "No se sabe".</ion-note>
+        <ion-note slot="error" *ngIf="form.controls.calleCtrl.touched">Ingrese la calle en donde queda ubicada la recicladora.</ion-note>
       </ion-item>
       <ion-item fill="outline" class="item-espaciado">
         <ion-label>Enlace GPS:</ion-label>
