--- a/src/app/sugerencias/sugerencias.page.html
+++ b/src/app/sugerencias/sugerencias.page.html
@@ -4,6 +4,9 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Comentarios</ion-title>
+    <ion-button routerLink="/inicio" fill="clear" id="inicio" color="primary" slot="end">
+      <ion-icon name="home-outline" slot="icon-only"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
