--- a/src/app/agregar-rec/agregar-rec.page.scss
+++ b/src/app/agregar-rec/agregar-rec.page.scss
@@ -1,41 +1,43 @@
 #container {
-    text-align: center;
-  
-    position:relative;
-    left: 0;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  
-  #container strong {
-    font-size: 20px;
-    line-height: 26px;
-  }
-  
-  #container p {
-    font-size: 16px;
-    line-height: 22px;
-  
-    color: #8c8c8c;
-  
-    margin: 0;
-  }
-  
-  #container a {
-    text-decoration: none;
-  }
-ion-button{
-    --background: #8ae2cc;
-    --color:  black;
+  text-align: center;
 }
-.item-espaciado{
+
+#container strong {
+  font-size: 20px;
+  line-height: 26px;
+}
+
+#container p {
+  font-size: 16px;
+  line-height: 22px;
+
+  color: #8c8c8c;
+
+  margin: 0;
+}
+
+#container a {
+  text-decoration: none;
+}
+
+ion-button {
+  --background: whitesmoke; ////#5f77ed  #8ae2cc
+  --color: black;
+}
+
+.boton-ionic {
+  text-align: right;
+}
+
+.item-espaciado {
   margin-top: 15px;
   margin-bottom: 15px;
 }
-.item-material{
-  font-size: 40px;
-}
-#center{
+
+#center {
   text-align: center;
+}
+
+#inicio {
+  --background: none;
 }
