--- a/src/app/denuncias/denuncias.page.html
+++ b/src/app/denuncias/denuncias.page.html
@@ -4,24 +4,29 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Aspectos legales</ion-title>
+    <ion-button routerLink="/inicio" fill="clear" id="inicio" color="primary" slot="end">
+      <ion-icon name="home-outline" slot="icon-only"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-padding" style="text-align: justify ;">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-refresher slot="fixed" (ionRefresh)="cargarLey()">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-  <h4 style="color:#229276; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Ley N° 716 que Sanciona Delitos 
+  <h4 style="color:#229276; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Ley N° 716 que
+    Sanciona Delitos
     Ambientales, Art. 12º.
   </h4>
   <p>
-    Quemar Basura es DELITO AMBIENTAL: «Los que depositen o incineren basuras 
-    u otros desperdicios de cualquier tipo, en las rutas, caminos o calles, 
-    cursos de agua o sus adyacencias, serán sancionados con multa de 100 (cien) 
-    a 1.000 (mil) jornales mínimos legales» 
+    Quemar Basura es DELITO AMBIENTAL: «Los que depositen o incineren basuras
+    u otros desperdicios de cualquier tipo, en las rutas, caminos o calles,
+    cursos de agua o sus adyacencias, serán sancionados con multa de 100 (cien)
+    a 1.000 (mil) jornales mínimos legales»
   </p>
   <h5>Para más información consulte aquí:</h5>
-  <a href="https://www.bacn.gov.py/leyes-paraguayas/2426/ley-n-716-sanciona-delitos-contra-el-medio-ambiente">Ley Nº 716 / SANCIONA DELITOS CONTRA EL MEDIO AMBIENTE</a>
+  <a href="https://www.bacn.gov.py/leyes-paraguayas/2426/ley-n-716-sanciona-delitos-contra-el-medio-ambiente">Ley Nº 716
+    / SANCIONA DELITOS CONTRA EL MEDIO AMBIENTE</a>
   <p>
     En caso de presenciar lo mencionado arriba contactar al siguiente número:
     <a href="https://wa.me/595985107712">
@@ -34,5 +39,5 @@
     </a>
   </p>
 
-  
+
 </ion-content>
