--- a/src/app/agregar-rec/formulario/formulario.component.html
+++ b/src/app/agregar-rec/formulario/formulario.component.html
@@ -47,7 +47,7 @@
       <ion-item fill="outline" class="item-espaciado">
         <ion-label>Materiales:</ion-label>
         <ion-select formControlName="materialesCtrl" placeholder="Seleccione..." [multiple]="true">
-          <ion-select-option *ngFor="let material of listaMateriales" [value]="material.material">{{material.material}}</ion-select-option>
+          <ion-select-option *ngFor="let material of listaMateriales" [value]="material.idmaterial">{{material.material}}</ion-select-option>
         </ion-select>
         <ion-note slot="error" *ngIf="form.controls.materialesCtrl.touched">Seleccione un material.</ion-note>
       </ion-item>
