--- a/src/app/denuncias/denuncias.page.html
+++ b/src/app/denuncias/denuncias.page.html
@@ -10,7 +10,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-padding">
+<ion-content [fullscreen]="true" class="ion-padding" style="text-align:justify">
   <ion-refresher slot="fixed" (ionRefresh)="cargarLey()">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
